--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
 
   <div class="calculator">
@@ -37,7 +39,7 @@
     </div>
     <div>
       <button type="button" class="btn btn-light" onclick="cubeButton()">x<sup>3</sup></button>
-      <button type="button" class="btn btn-light" onclick="appendOperator('(')">(</button>
+      <button type="button" class="btn btn-light" onclick="openBracket()">(</button>
       <button type="button" class="btn btn-light" onclick="closeBracket()">)</button>
       <button type="button" class="btn btn-light" onclick="factorialButton()">n!</button>
       <button type="button" class="btn btn-light" onclick="appendOperator('*')">x</button>
@@ -72,4 +74,5 @@
   </div>
   <script src="./script.js"></script>
 </body>
+
 </html>
